@startuml
title DMS - Domain Penambahan Dokumen

skinparam classAttributeIconSize 0
hide circle

package "Penambahan Dokumen" {
  class ManualArsip {
    namaDokumen
    kategori
    tanggalDokumen
    nominalRealisasi
    keterangan
  }

  class ManualArsipAttachment {
    judulLampiran
  }
}

package "Folder-First Archive" {
  class MasterKlasifikasiArsip {
    JenisPembayaran
  }

  class BerkasArsip {
    statusBerkas
    statusArsip
  }

  class BerkasArsipItem {
    sourceType
  }

  enum SourceType {
    WORKFLOW
    MANUAL
  }
}

ManualArsip "1" *-- "0..*" ManualArsipAttachment : optional attachments
ManualArsip "0..*" --> "1" MasterKlasifikasiArsip : selected Jenis Pembayaran
MasterKlasifikasiArsip "1" o-- "1..*" BerkasArsip : groups documents
BerkasArsip "1" *-- "1..*" BerkasArsipItem : folder items
BerkasArsipItem "0..*" --> "0..1" ManualArsip : source MANUAL
BerkasArsipItem ..> SourceType

note right of ManualArsip
  Nama fitur pengguna: Penambahan Dokumen.

  Field wajib:
  nama dokumen, kategori, tanggal dokumen/sumber,
  Jenis Pembayaran, nominal realisasi, keterangan.
  Lampiran bersifat opsional.
end note

note bottom of BerkasArsip
  ManualArsip dihubungkan ke berkas folder-first
  berdasarkan Jenis Pembayaran yang dipilih.
  Berkas dapat berisi item MANUAL dan WORKFLOW.
end note

note bottom of ManualArsipAttachment
  Detail penyimpanan lampiran tetap internal
  dan tidak diekspos di diagram domain.
end note

@enduml
